--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -98891,4 +98891,11 @@ video {
     }
 }
 
-
+:root {
+    --primary: #0c0f20;
+    --secondary: #af7dec;
+    --text: #ffffff;
+}
+#button{
+    background-color: var(--secondary);
+}
